Bug 919590 - H.264 video playback stop on nexus4 soon after starting playback; r=reviewers